[gd_scene load_steps=3 format=3 uid="uid://bevq5w7yxgw6p"]

[ext_resource type="Script" uid="uid://c1n5r44o7gvhe" path="res://scripts/ui/volume_slider.gd" id="1_3n1vp"]
[ext_resource type="FontFile" uid="uid://c7dw5j8jpja4a" path="res://assets/fonts/lazy_dog.ttf" id="2_iki82"]

[node name="VolumeSlider" type="VBoxContainer"]
offset_right = 275.0
offset_bottom = 55.0
script = ExtResource("1_3n1vp")
slider_label = "Music Volume"

[node name="VolumeLabel" type="Label" parent="."]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_iki82")
theme_override_font_sizes/font_size = 40
text = "Volume"

[node name="SliderContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="VolumeSlider" type="HSlider" parent="SliderContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
value = 70.0

[node name="VolumePercent" type="Label" parent="SliderContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_iki82")
theme_override_font_sizes/font_size = 20
text = "70%"

[connection signal="value_changed" from="SliderContainer/VolumeSlider" to="." method="_on_volume_slider_value_changed"]
